--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url =your backend url
-sentiment_analyzer_url=your code engine deployment url
+backend_url =https://dedeepyamd-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+sentiment_analyzer_url=yhttps://sentianalyzer.2155gwhy7yut.us-south.codeengine.appdomain.cloud/
